загрузил полностью работу

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,21 @@
 <body>
 	@@include('components/page/_2_header.html')
 	<main class="main">
+		@@include('components/page/_5_Hero.html')
+		@@include('components/page/_6_Info.html')
+		@@include('components/page/_7_Consultant.html')
+		@@include('components/page/_8_forma.html')
+		@@include('components/page/_9_Organizer.html')
+		@@include('components/page/_10_Last.html')
 		<!-- <svg class="include-svg"
 				 src="storm.svg"></svg> -->
 	</main>
 	@@include('components/page/_3_footer.html')
+
+	<!-- Display:none -->
+	@@include('components/page/_11_thanks.html')
+	@@include('components/page/_12_description.html')
+
 	@@include('components/page/_4_scripts.html')
 </body>
 
